--- a/Session 2/Activity2.html
+++ b/Session 2/Activity2.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <Style>
-        Selection{
+        Section{
             border: 1px solid black;
             padding: 10px 20px;
+            
 
         }
     </Style>
@@ -13,7 +14,8 @@
     <title>Activity 2</title>
 </head>
 <body>
-    <a href="index.html">Go Back to Landing Page</a>
+    <a href="index.html">Go Back to Main Page</a>
+    <section>
     <form>
       <h2>1. Shipping Address</h2>
       <label for = "StrtAdd" > Street Address: </label> <br>
@@ -22,7 +24,10 @@
       <label for = "zcode"> Zip Code:</label> <br>
       <input type="number" id = "zcode" name="zcode"  Placeholder = "Enter Zipcode"> <br>
     </form>
-     <form>
+    </section>
+    <br>
+    <section>
+    <form>
       <h2>2. Payment Address</h2>
       <label for = "cnum" > Card Number: </label> <br>
       <input type = "text" id="cnum" name = "cnum"  Placeholder="Enter Card Number"> <br> <br>
@@ -30,8 +35,12 @@
       <input type = "date" id="exdate" name = "exdate" > <br> <br>
     
       <input type="checkbox" id="signme" name="signme" value="yes">
-      <label for = "signme" > Sign Me Up for details </label> <br><br>
+      <label for = "signme" > Sign Me Up for deals </label> <br><br>
       <input type="submit" value="Complete Purchase">
     </form>
+ 
+    </section>
+   
+   
 </body>
 </html>
